<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/rot13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <RadioGroup
                android:id="@+id/gruparot13"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/encrypt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sifriranje" />

                <RadioButton
                    android:id="@+id/decrypt2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/desifriranje" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonrot13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solve" />

            <TextView
                android:id="@+id/rijesenjerot13"
                android:layout_width="match_parent"
                android:layout_height="292dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>